--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
+  background: linear-gradient(to right, #00aaff, #00ff6c);
   font-family: sans-serif;
 }
 .calculator-container {
@@ -24,18 +24,18 @@ body {
   grid-column: span 2;
 }
 
-.calculator-container>button {
+.calculator-container > button {
   cursor: pointer;
   font-size: 2rem;
   border: 1px solid #4289a7;
   outline: none;
-  background-color: #f69d3c;
+  background-color: rgba(255, 255, 255, 0.75);
   opacity: 80%;
   border-radius: 5px;
 }
 
-.calculator-container>button:hover {
-  opacity: 100%;
+.calculator-container > button:hover {
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .calculator-display {
@@ -43,23 +43,25 @@ body {
 }
 
 .calculator-display {
-  background-color: #efd7a5;
+  background-color: rgba(0, 0, 0, 0.75);
   border: 1px solid #4289a7;
   opacity: 80%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  justify-content: space-between;
   padding: 10px;
-  padding-top: 39px;
-  padding-bottom: 5px;
+  word-wrap: break-word;
+  word-break: break-all;
   border-radius: 5px;
 }
 
 .calculator-display .previous-operand {
+  color: rgba(255, 255, 255, 0.75);
   font-size: 1.5rem;
 }
 
 .calculator-display .current-operand {
+  color: white;
   font-size: 2.5rem;
-  padding-top: 7px;
 }
